--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trirong">
-  <link rel="stylesheet" src href="/css/style.css">
+  <link rel="stylesheet" src href="./css/style.css">
 </head>
 <body>
   <section>
     <div id="text">
       <div class="flex">
+
         <h4 style="color: white;">Magic 8 Ball</h4>
         <br>
         <h4 style="color: white;">Ask me anything!</h4>
