--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trirong">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   <link rel="stylesheet" href="/css/style.css">
 <body>
   <section>
@@ -17,7 +16,7 @@
         <br>
         <h4 style="color: white;">Ask me anything!</h4>
         <br>
-        <input type="text" value="Enter your question here.. ." onclick="this.value=''" id="question" />
+        <input type="text" value="Enter your question here.. " onclick="this.value=''" id="question" />
         <br>
         <br>
         <p style="color: white;" id="info">Click on the number 8 below<br> to reveal the response.</p>
