--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   <link rel="stylesheet" href="/css/style.css">
 <body>
+  
   <section>
     <div id="text">
-      
-        <h4 style="color: white;">Magic 8 Ball</h4>
-        <br>
-        <h4 style="color: white;">Ask me anything!</h4>
+     
+        <h4>Magic 8 Ball</h4>
+        <h4>Ask me anything!</h4>
         <br>
         <input type="text" value="Enter your question here.. " onclick="this.value=''" id="question" />
         <br>
         <br>
-        <p style="color: white;" id="info">Click on the number 8 below<br> to reveal the response.</p>
+        <p>Click on the number 8 below<br> to reveal the response.</p>
         <div id="eight-ball" class="eight-ball">
           <div class="response">
             <p id="numberEight">8</p>
@@ -28,6 +28,7 @@
         </div>
       </div>
   </section>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script defer src="./js/main.js"></script>
 </body>
